css/style.css
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;vertical-align:baseline;font:inherit;font-size:100%;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}body{line-height:1;}ol,ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:none;}table{border-spacing:0;border-collapse:collapse;}

* { -webkit-box-sizing: border-box; box-sizing: border-box;word-break: break-word;-webkit-hyphens: auto;-moz-hyphens: auto;hyphens: auto; 
/* better box model */
-moz-box-sizing: border-box;
/* hyphenation */
-webkit-hyphenate-before: 2;-webkit-hyphenate-after: 3;hyphenate-lines: 3;
/* ligatures & special OpenType features */
-moz-font-feature-settings: "liga=1, dlig=1";-ms-font-feature-settings: "liga", "dlig";-webkit-font-feature-settings: "liga", "dlig";-o-font-feature-settings: "liga", "dlig";font-feature-settings: "liga", "dlig";
/* adjust all font stacks to use same x-height */
font-size-adjust: auto;
}

/*----------------------------------------------------------------------*

	BASIC ELEMENTS

*----------------------------------------------------------------------*/


body {
	min-height: 100%;
	width:100%;
	background: url(../img/bg.jpg);
	background-size:cover;
	color:#e7e7d5;
	font-family: 'Proxima N W15 Reg', Helvetica, Arial, sans-serif;
}

.container{
	margin:0 auto 0;
	max-width: 520px;
	-ms-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 0 1em;
}

.logo{
	margin: 50px 0 30px;
	width: 100%;
	height: 170px;
	background: url(../img/logo.png);
	text-indent: -9000px;
	background-size: contain;
	background-repeat: no-repeat;
}

.main{
	text-align: center;
}

.main-header{
	margin:0 auto;
	max-width:200px;
	border-top:1.5px solid #e7e7d5;
	border-bottom:1.5px solid #e7e7d5;
}

h1 {
	margin: 8px auto;
	text-transform: uppercase;
	letter-spacing: 5px;
	font-weight:lighter;
	font-size:24px;
}

span{
	font-weight:bold;
}

h2{
	margin:0 auto 40px;
	font-weight: lighter;
	font-size: 18px;
}

p{
	margin:0 auto 30px;
	text-align: center;
	font-weight: 300;
	font-size: 14px;
	line-height: 24px;
}

.signup {
	text-transform: uppercase;
	font-weight: lighter;
	font-size:14px;
}

input{
	margin-top:10px;
}

.email{
	width:200px; 
}

.submit{
	border:none;
	background:url(../img/signupbutton.jpg);
}
hr {
	margin-bottom: 24px;
}
footer{
	margin:35px auto 45px;
	padding: 5px 0;
	border-top:1.5px solid #e7e7d5;
	border-bottom:1.5px solid #e7e7d5;
	text-align:center;
	text-transform: uppercase;
	letter-spacing: 3px;
	font-weight: lighter;
	font-weight: lighter;
	font-family: serif;
	line-height: 25px;
}
.headerSpan {
	min-height: 90px;
	margin-top: 12px;
}
.withrow {
	text-transform: uppercase;
	margin-top: 36px;
	float: left;
	margin-bottom: 0;
	margin-right: 10px;
}
.withrow span {
	font-weight: normal;
}
#haywoods {
	float: left;
	max-width: 200px;
}
.break{
	letter-spacing: 10px;
	font-weight: lighter;
}
.bookButton {
  border-style: solid;
  border-width: 1px;
  border-color: rgb( 39, 80, 79 );
  border-radius: 5px;
  background-image: -moz-linear-gradient( 90deg, rgb(108,150,148) 0%, rgb(138,180,178) 100%);
  background-image: -webkit-linear-gradient( 90deg, rgb(108,150,148) 0%, rgb(138,180,178) 100%);
  background-image: -ms-linear-gradient( 90deg, rgb(108,150,148) 0%, rgb(138,180,178) 100%);
  opacity: 0.82;
  box-shadow: 0.891px 0.454px 2px 0px rgb( 21, 42, 41 );
  text-shadow: 0.5px 0.866px 0px rgb( 32, 55, 55 );
  font-family: 'Proxima N W15 Bold';
  font-size: 18px;
  line-height: 1.333;
  padding: 5px 5px 2px 5px;
  color: rgb(255, 255, 255);
  text-align: center;
	text-transform: uppercase;
}
.orCall {
  text-align: center;
	text-transform: uppercase;
	text-decoration: none;
	color:#e7e7d5;
	letter-spacing: 1px;
	word-spacing: 2px;
	margin-left: 6px;
}
.toContact {
	margin: 24px auto;
}
.inJuly {
	margin-top: 30px;
}

/*----------------------------------------------------------------------*

	COMMON CLASSES

*----------------------------------------------------------------------*/

.clearfix:before, .clearfix:after { display: table; content: " "; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }

.left {
	float: left;
}

.right {
	float: right;
}

.clear {
	clear: both;
}

@media screen and (max-width: 530px) {
	.headerSpan {
		min-height: 140px;
	}
	.withrow {
		width: 100%;
		margin-bottom: 0;
	}
	#haywoods {
		margin: 0 auto;
		text-align: center;
		position: absolute;
		left: 0;
		right: 0;
		margin-top: 50px;
	}
}

@media (max-width:480px){
	.logo{
		margin: 50px 0 30px;
		width: 100%;
		height: 137px;
	}
}

@media screen and (max-width: 420px) {
	.orCall {
		margin-left: 0;
		display: inherit;
		margin-top: 12px;
	}
}

/*----------------------------------------------------------------------*

	INDIVIDUAL PAGES

*----------------------------------------------------------------------*/

.Created_with_care_and_a_little_whimsy_on_Main_S {
  font-size: 13.002px;
  font-family: 'Proxima N W15 Bold';
  color: rgb( 231, 231, 213 );
  line-height: 1.487;
  text-align: justifyCenter;
  -moz-transform: matrix( 1.03532608695652,0,0,1.03443113772455,0,0);
  -webkit-transform: matrix( 1.03532608695652,0,0,1.03443113772455,0,0);
  -ms-transform: matrix( 1.03532608695652,0,0,1.03443113772455,0,0);
  position: absolute;
  left: 259.501px;
  top: 407.082px;
  width: 502.977px;
  height: 167.614px;
  z-index: 27;
}

